--- a/chat-client/bower.json
+++ b/chat-client/bower.json
@@ -3,5 +3,9 @@
   "private": "true",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.0.0-rc.0"
+  },
+  "dependencies": {
+    "lodash": "~3.4.0",
+    "socket.io": "~1.3.5"
   }
 }
