--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "~4.12.2",
-    "socket.io": "~1.3.5"
+    "socket.io": "~1.3.5",
+    "waterline": "~0.10.18",
+    "sails-mysql": "~0.10.11"
   }
 }
