--- a/chat-client/bower.json
+++ b/chat-client/bower.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "lodash": "~3.4.0",
-    "socket.io": "~1.3.5"
+    "socket.io": "~1.3.5",
+    "angular-moment": "~0.9.0"
   }
 }
