--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -10,8 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "~4.12.2",
+    "password-hash": "^1.2.2",
+    "sails-mysql": "~0.10.11",
     "socket.io": "~1.3.5",
-    "waterline": "~0.10.18",
-    "sails-mysql": "~0.10.11"
+    "waterline": "~0.10.18"
   }
 }
