--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -13,6 +13,7 @@
     "password-hash": "^1.2.2",
     "sails-mysql": "~0.10.11",
     "socket.io": "~1.3.5",
-    "waterline": "~0.10.18"
+    "waterline": "~0.10.18",
+    "lodash": "~3.5.0"
   }
 }
