--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -14,6 +14,8 @@
     "sails-mysql": "~0.10.11",
     "socket.io": "~1.3.5",
     "waterline": "~0.10.18",
-    "lodash": "~3.5.0"
+    "lodash": "~3.5.0",
+    "colors": "~1.0.3",
+    "nconf": "~0.7.1"
   }
 }
